trunk/Archive2/d0/0621a0311fe000/main.cpp
#include <iostream>
#include <string>

int main()
{
    std::string s;
    std::cin.getline(s);
    std::cout << s;
    
    return 0;
}